# FHMCSimulation

./: .gitignore  .travis.yml  LICENSE.txt  README.md  contributors.txt
bench/: makeRuns  masterInp.json
bench/1/: energyHistogram.nc  final.xyz  final_lnPI.nc  high.xyz  inp1.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/10/: energyHistogram.nc  final.xyz  high.xyz  inp10.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-Checkpoint_lnPI.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/11/: inp11.json  log  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/12/: high.xyz  high_11.xyz  log  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/12_2/: inp12.json  log  low.xyz  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/13/: high.xyz  inp13.json  log  low.xyz  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/14/: high.xyz  inp14.json  log  low.xyz  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/15/: inp15.json
bench/2/: energyHistogram.nc  final.xyz  final_lnPI.nc  high.xyz  inp2.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/3/: energyHistogram.nc  final.xyz  high.xyz  inp3.json  tmmc-Checkpoint_C.nc  tmmc-Checkpoint_lnPI.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/4/: energyHistogram.nc  final.xyz  final_lnPI.nc  high.xyz  inp4.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/5/: energyHistogram.nc  final.xyz  final_lnPI.nc  inp5.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/6/: energyHistogram.nc  final.xyz  high.xyz  inp6.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-Checkpoint_lnPI.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/7/: energyHistogram.nc  final.xyz  final_lnPI.nc  high.xyz  inp7.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/8/: energyHistogram.nc  final.xyz  high.xyz  inp8.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-Checkpoint_lnPI.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/9/: energyHistogram.nc  final.xyz  high.xyz  inp9.json  log  low.xyz  tmmc-Checkpoint_C.nc  tmmc-Checkpoint_lnPI.nc  tmmc-beginning-Checkpoint_C.nc  tmmc-beginning-Checkpoint_lnPI.nc  wl-Checkpoint_H.nc  wl-Checkpoint_lnPI.nc
bench/dummyCheck/: example_input.json
doc/: Doxyfile
doc/html/: aggvolbias_8h.html  annotated.html  atom_8cpp.html  atom_8cpp_source.html  atom_8h.html  atom_8h_source.html  barrier_8cpp.html  barrier_8h.html  barrier_8h_source.html  bias_8cpp.html  bias_8cpp_source.html  bias_8h.html  bias_8h_source.html  cell_list_8cpp.html  cell_list_8cpp_source.html  cell_list_8h.html  cell_list_8h_source.html  checkpoint_8cpp_source.html  checkpoint_8h_source.html  classagg_vol_bias3.html  classagg_vol_bias_delete.html  classatom.html  classcell_list.html  classcomposite_barrier.html  classcustom_exception-members.html  classcustom_exception.html  classdelete_particle.html  classdynamic__one__dim__histogram.html  classes.html  classfs_lennard_jones.html  classhard_core.html  classhistogram.html  classinsert_particle.html  classlennard_jones-members.html  classlennard_jones.html  classmc_move-members.html  classmc_move.html  classmoves-members.html  classmoves.html  classpair_potential.html  (+93 more)
doc/latex/: aggvolbias_8cpp.tex  annotated.tex  atom_8cpp.tex  atom_8h.tex  barrier_8h.tex  bias_8cpp.tex  bias_8h.tex  cell_list_8cpp.tex  cell_list_8h.tex  checkpoint_8cpp.tex  classagg_vol_bias3.tex  classagg_vol_bias_delete.eps  classagg_vol_bias_delete.tex  classagg_vol_bias_insert.eps  classatom.tex  classbarrier.tex  classcell_list.tex  classcomposite_barrier.tex  classcustom_exception.eps  classcustom_exception.tex  classcylinder_z.eps  classcylinder_z.tex  classdelete_particle.eps  classdelete_particle.tex  classdynamic__one__dim__histogram.tex  classfs_lennard_jones.tex  classhard_core.tex  classhard_wall_z.eps  classmc_move.eps  (+52 more)
docs/: Doxyfile
driver/: main-gcmc.cpp  main-gcmc.cpp~  main-tmmc.cpp
helper/: altsep.py  input.json  window_helper.py
src/: aggvolbias.cpp  aggvolbias.h  atom.cpp  atom.h  barrier.cpp  barrier.h  bias.cpp  bias.h  cellList.cpp  cellList.h  checkpoint.cpp  checkpoint.h  crossover.cpp  crossover.h  delete.cpp  delete.h  fhmc.h  gcmc.cpp  gcmc.h  global.h  histogram.cpp  histogram.h  input.cpp  input.h  insert.cpp  insert.h  main.cpp  mover.cpp  mover.h  moves.cpp  moves.h  potentials.cpp  potentials.h  quaternion.cpp  quaternion.h  restart.cpp  restart.h  sanity.cpp  sanity.h  swap.cpp  (+12 more)
tests/: grid.py  make_grid.py  mc_analysis_tools.py  org_grid.py
tests/src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test.cc
tests/src/gtest-1.7.0/: Makefile  cmake_install.cmake
tests/unittest/src/: CMakeLists.txt  test.cc
tests/unittest/src/gtest-1.7.0/: Makefile  cmake_install.cmake
(+594 files in other folders)
